<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="placeholder_lorem_ipsum">Lorem Ipsum</string>
    <string name="placeholder_lorem_ipsum_short">Lorem</string>
    <string name="app_name">Icicle for Freenet</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="connecting">Connecting to node &#8230;</string>
    <string name="no_node_configured">No local nodes configured</string>
    <string name="status_title_basic">Freenet Node Status (basic)</string>
    <string name="status_title_advanced">Freenet Node Status (Advanced)</string>
    <string name="node">Node</string>
    <string name="recentInputRate">Download Speed: </string>
    <string name="version">Version: </string>
    <string name="recentOutputRate">Upload Rate:</string>
    <string name="uptime">Node Uptime: </string>
    <string name="status">Status</string>
    <string name="peers">Peers</string>
    <string name="unnamed_peer">Freenet Node</string>
    <string name="unnamed_opennet_peer">Opennet Node</string>
    <string name="uploads">Uploads</string>
    <string name="downloads">Downloads</string>
    <string name="unknown">Unknown</string>
    <string name="size_label">Size: </string>
    <string name="status_downloading">Downloading</string>
    <string name="status_uploading">Uploading</string>
    <string name="status_paused">Paused</string>
    <string name="status_done">Done</string>
    <string name="status_failed">Failed</string>
    <string name="estimated">Estimated</string>
    <string name="action_upload">Upload File</string>
    <string name="select_file">Select File</string>
    <string name="file_upload_icon_descr">File Upload Icon</string>
    <string name="file_upload_instructions">Select a file to upload</string>
    <string name="file_upload_instructions_another">Tap thumbnail to choose another file</string>
    <string name="NodeRef">Freenet Node Reference:</string>
    <string name="openNodeRef">Open Freenet Node Reference</string>
    <string name="addNodeRef">Save and Add Node Reference</string>
    <string name="shareNodeRef">Share Node Reference</string>
    <string name="saveNodeRef">Save Node Reference</string>
    <string name="addingNodeRef">Adding Node Reference</string>
    <string name="addingFriendNodeRef">Adding Friend Node Reference</string>
    <string name="savingNodeRef">Saving Node Reference</string>
    <string name="protocolError">Protocol Error</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="done">Transfer Complete</string>
    <string name="failed">Transfer Failed</string>
	<string name="pref_wifi_only_title">Wi-Fi Only</string>
	<string name="pref_wifi_only_desc">Connect to Freenet Node over Wifi Only</string>
	<string name="node_settings_dialog_name">Freenet Nodes</string>
	<string name="pref_nodes_title">My Nodes</string>
    <string name="pref_friend_nodes_title">Friend Nodes</string>
	<string name="node_name_label">Name</string>
	<string name="node_name_hint">My Node</string>
	<string name="node_address_label">Address</string>
	<string name="node_address_hint">192.168.0.1  or  mypc.local</string>
	<string name="node_port_label">Port</string>
	<string name="node_port_hint">9481</string>
	<string name="node_add">Add New Node</string>
	<string name="node_accept">Set as Active Node</string>
	<string name="node_change_active">Connecting to new node &#8230;</string>
	<string name="node_edit">Edit Node</string>
	<string name="node_share">Share Node Reference</string>
	<string name="node_discard">Remove Node</string>
	<string name="node_discard_message">Are you sure you want to delete this entry?</string>
	<string name="CHK">CHK@</string>
	<string name="SSK">SSK@</string>
	<string name="SSK_generating">SSK@ (generating)</string>
	<string name="identifierCollision_upload">Unable to add upload: It appears you are already uploading that key.</string>
	<string name="refresh_rate">Refresh Rate</string>
	<string name="remove_exif">EXIF metadata will be removed by Freenet Node</string>
	<string name="icon">Icon</string>
    <string name="title_activity_reference">Freenet Reference</string>
    <string name="action_share">Share</string>
    <string name="action_messages">Messages</string>
    <string name="priority_label">Priority: </string>
    <string name="priority_0">Emergency</string>
    <string name="priority_1">Very High</string>
    <string name="priority_2">High</string>
    <string name="priority_3">Medium</string>
    <string name="priority_4">Low</string>
    <string name="priority_5">Very Low</string>
    <string name="no_nodes">No Nodes Configured</string>
    <string name="trust">Trust</string>
    <string name="visibility">Visibility</string>
    <string name="title_activity_list_messages">Messages</string>
    <string name="no_messages">No messages</string>
</resources>
