<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:background="@color/app_background"
        android:contentDescription="@string/icon"
        android:onClick="changeTranferPriority"
        android:src="@drawable/ic_action_play"
        android:visibility="gone" />
    
    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:background="@color/app_background"
        android:contentDescription="@string/icon"
        android:onClick="changeTranferPriority"
        android:src="@drawable/ic_action_pause" />
    
    <ImageView
        android:id="@+id/transfer_done"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:background="@drawable/round_button_green"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_action_accept_light"
        android:visibility="gone" />
    
    <ImageView
        android:id="@+id/transfer_failed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:background="@drawable/round_button_red"
        android:contentDescription="@string/failed"
        android:src="@drawable/ic_action_cancel_light"
        android:visibility="gone" />
    
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:padding="3dp"
        android:paddingLeft="4dp" >

        <TextView
            android:id="@+id/transfer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/transfer_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/transfer_status_label"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/transfer_name" />

        <TextView
            android:id="@+id/transfer_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/transfer_progress"
            android:paddingRight="3dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/transfer_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transfer_status_label"
            android:layout_alignBottom="@+id/transfer_status_label"
            android:layout_toRightOf="@+id/transfer_status_label"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transfer_status_label" 
            android:layout_alignParentLeft="true"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/transfer_size_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/size_label" />

                <TextView
                    android:id="@+id/transfer_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/transfer_priority_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/priority_label" />

                <TextView
                    android:id="@+id/transfer_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    
    </LinearLayout>


