<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/NodeRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NodeRef"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16sp"
        android:textColor="@color/black"
        android:textSize="@dimen/abc_text_size_subhead_material" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95" >

        <TextView
            android:id="@+id/NodeRef_value"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </ScrollView>

    <TableRow
        android:id="@+id/button_row"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/cancelNodeRef"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_weight=".5"
            android:onClick="cancelReference"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addNodeRef"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="addReference"
            android:text="@string/addNodeRef" />
    </TableRow>

</LinearLayout>